--- a/Landing page.html
+++ b/Landing page.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to my Portfolio</title>
+    <title>Arundhathy Varma's Portfolio</title>
+    <link rel="stylesheet" type="text/css"href="style.css">
+    <link rel="icon" type="image/x-icon"href="">
 </head>
 <body>
     <h1>Welcome to my portfolio</h1>
