--- a/Landing page.html
+++ b/Landing page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arundhathy Varma's Portfolio</title>
     <link rel="stylesheet" type="text/css"href="style.css">
-    <link rel="icon" type="image/x-icon"href="">
+    <link rel="icon" type="image/x-icon"href="/images/smaug.png">
 </head>
 <body>
     <h1>Welcome to my portfolio</h1>
