--- a/Landing page.html
+++ b/Landing page.html
@@ -6,6 +6,7 @@
     <title>Arundhathy Varma's Portfolio</title>
     <link rel="stylesheet" type="text/css"href="style.css">
     <link rel="icon" type="image/x-icon"href="/images/smaug.png">
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Press_Start_2P">
 </head>
 <body>
     <h1>Welcome to my portfolio</h1>
