--- a/Landing page.html
+++ b/Landing page.html
@@ -6,10 +6,18 @@
     <title>Arundhathy Varma's Portfolio</title>
     <link rel="stylesheet" type="text/css"href="style.css">
     <link rel="icon" type="image/x-icon"href="/images/smaug.png">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Press_Start_2P">
+    <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
-    <h1>Welcome to my portfolio</h1>
-    <P>Some of my recent work</P>
+    <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-12 content">
+            <h1>Welcome to My Website</h1>
+            <p>This is a simple website with a white grid on a purple background created using HTML, CSS, and Bootstrap.</p>
+          </div>
+        </div>
+      </div>
 </body>
 </html>
