--- a/Landing page.html
+++ b/Landing page.html
@@ -3,21 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arundhathy Varma's Portfolio</title>
-    <link rel="stylesheet" type="text/css"href="style.css">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon"href="/images/smaug.png">
     <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js">
+    </script>
+    <link href="https://fonts.googleapis.com/css2?family=Clash+Display:wght@400;500&display=swap" rel="stylesheet">
+    <script src="script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 </head>
-<body>
-    <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-12 content">
-            <h1>Welcome to My Website</h1>
-            <p>This is a simple website with a white grid on a purple background created using HTML, CSS, and Bootstrap.</p>
-          </div>
-        </div>
-      </div>
+<div id="circularcursor"></div>
+<section id="home">
+<body class="grid-background">
+    <header class="container py-3">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand heading-font" href="#home">Arundhathy Varma</a>
+                <div class="d-flex">
+                    <a class="nav-link" href="#about">About me</a> 
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                    <a class="nav-link" href="#projects">Projects</a>
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                    <a class="nav-link" href="#contact">Contact</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+</section>
+
+
+    <main class="container my-5">
+        <section id="hero">
+            <h1 class="display-1 heading-font">hello world!</h1>
+            <p>Welcome to my Portfolio.</p>
+        </section>
+    
+        <section id="about" class="my-5">
+        <div class="shape-container"></div>
+        <div class="flex-container">
+             <p><div class="AMhead">About me</div><br><br>Hello! I am a second year communication design student eager to absorb as much as I can from the environment I surround myself with and implementing all I have learnt in my designs. I also love coding, writing and painting in my free time!</p>
+            <div class="AMimage"><img src="images/photo1702272394.jpeg" width=300px alt=""></div>
+        
+        </section>
+    </div>
+
+        <section id="contact" class="my-5 text-center">
+            <h2 class="heading-font">Contact me!</h2>
+            <p>Connect with me using one of the links below if you have some cool ideas and want to collaborate! I would love to work with you! Let's make art!</p>
+            <!-- Add social media links here -->
+        </section>
+    </main>
+<div class="footer">
+    <footer class="container text-center py-4">
+        <span>Mumbai, India</span> $nbsp
+        <a href="mailto:arundhathyvm2@gmail.com">arundhathyvm2@gmail.com</a> $nbsp
+        <a href="tel:+9560272293">9560272293</a>
+    </footer>
+</div>
+
+    <!-- Bootstrap Bundle with Popper -->
+
 </body>
 </html>
