--- a/Landing page.html
+++ b/Landing page.html
@@ -11,11 +11,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js">
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Clash+Display:wght@400;500&display=swap" rel="stylesheet">
-    <script src="script.js"></script>
+    
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="script.js"></script>
+
+  <div class="cursor">
+    <div class="cursor__ball cursor__ball--big"></div>
+    <div class="cursor__ball cursor__ball--small"></div>
+</div>
 
 </head>
-<div id="circularcursor"></div>
 <section id="home">
 <body class="grid-background">
     <header class="container py-3">
