--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Portfolio/projects</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/images/Screenshot 2023-12-12 020221.png">
+    <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js">
+    </script>
+    <link href="https://fonts.googleapis.com/css2?family=Clash+Display:wght@400;500&display=swap" rel="stylesheet">
+    
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="script.js"></script>
 </head>
-<body>
-    <h1>These are the projects</h1>
-</body>
-</html>
+
+<section id="home">
+<body class="grid-background">
+    <div id="cursor"></div>
+    <header class="container py-3">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand heading-font" href="#home"> <img src="images/Screenshot 2023-12-12 020221.png" width="40px" alt=""style="margin-right:10px;">Arundhathy Varma</a>
+                <div class="d-flex">
+                    <a class="nav-link" href="#about">About me</a> 
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                    <a class="nav-link" href="#projects.html">Projects</a>
+                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                    <a class="nav-link" href="#contact">Contact</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+</section>
