--- a/Landing page.html
+++ b/Landing page.html
@@ -26,7 +26,7 @@
                 <div class="d-flex">
                     <a class="nav-link" href="#about">About me</a> 
                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                    <a class="nav-link" href="#projects.html">Projects</a>
+                    <a class="nav-link" href="projects.html">Projects</a>
                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                     <a class="nav-link" href="#contact">Contact</a>
                 </div>
@@ -48,15 +48,16 @@
                     <div class="content">
                         <p class="AMhead">About me</p>
                         <p>Hello! I am a second-year communication design student eager to <br>absorb as much as I can from the environment I surround <br>myself with and implement all I have learned in <br>my designs. I also love coding, writing, and <br> painting in my free time!</p>
-                        <a class="deco" href="images/deco.png" width="100px"></a>
+
                     </div>
                     <div class="AMimage"><img src="images/photo1702272394.jpeg" width="150px" alt=""></div>
+                    <div class="filler"><img src="images/deco.png" width="150px"></div>
                 </div>
             </div>
         </section>
 
         <marquee class="scrolling-text-container"  loop="-1" scrollamount="35">
-            <div class="scrolling-text moveltr">Poetry<div class="smalld"></div>Visual Arts<div class="smalld"></div>Typography<div class="smalld"></div>Concept Art and Tattoo Designs</marquee>
+            <div class="scrolling-text moveltr">Poetry<div class="smalld"></div>Visual Arts<div class="smalld"></div>Typography<div class="smalld"></div>Coding</marquee>
 
             <marquee class="scrolling-text movertl" direction="right"loop="-1" scrollamount="25"><div class="smallD"> </div>Communication Design<div class="smalld"></div></div>
             </marquee>
@@ -75,22 +76,21 @@
             <a href="https://www.behance.net/arundhathyvarma"><img src="images/behan.png" width="33px"style="margin-right:70px;"></a>
 
             <a href="https://www.linkedin.com/in/arundhathy-varma-225a32270"><img src="images/linkedin.png" width="40px"></a>
-
+        
             <div class="row justify-content-center">
-                <div class="col-sm-4 projects">
-                  <div class="card" style="width: 400px;">
+                <div class="col-sm-6 projects">
+                  <div class="card">
                     <div class="card-body text-center">
                       <h4 class="card-title">Some Projects</h4>
                       <p class="card-text"><br>If you would like to see some of my projects, click the button below! :] </p>
-                      <a href="projects.html" class="btn btn-dark">View more details</a>
+                      <a href="projects.html" class="btn btn-dark">View All Projects!</a>
                     </div>
                   </div>
-
-
-
         </div>
-        </section>
-    </main>
+     </section>
+</main>
+
+
 <div class="footer">
     <footer class="container text-center py-4">
         <a href="https://maps.app.goo.gl/quP3w9fHGffHURt18">Mumbai,India</a> &nbsp
