--- a/projects.html
+++ b/projects.html
@@ -22,15 +22,74 @@
     <header class="container py-3">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand heading-font" href="#home"> <img src="images/Screenshot 2023-12-12 020221.png" width="40px" alt=""style="margin-right:10px;">Arundhathy Varma</a>
+                <a class="navbar-brand heading-font" href="Landing page.html"> <img src="images/Screenshot 2023-12-12 020221.png" width="40px" alt=""style="margin-right:10px;">Arundhathy Varma</a>
                 <div class="d-flex">
-                    <a class="nav-link" href="#about">About me</a> 
+                    <a class="nav-link" href="Landing page.html#about">About me</a> 
                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                     <a class="nav-link" href="#projects.html">Projects</a>
                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link" href="Landing page.html#contact">Contact</a>
                 </div>
             </div>
         </nav>
     </header>
 </section>
+
+<main class="container my-5">
+    <section id="hero">
+        <h1 class="display-2 heading-font">projects
+    </section>
+</main>
+
+<marquee class="scrolling-text-container"  loop="-1" scrollamount="35">
+    <div class="scrolling-text moveltr">Poetry<div class="smalld"></div>Visual Arts<div class="smalld"></div>Typography<div class="smalld"></div>Coding</marquee>
+
+    <marquee class="scrolling-text movertl" direction="right"loop="-1" scrollamount="25"><div class="smallD"> </div>Communication Design<div class="smalld"></div></div>
+    </marquee>
+
+<section id="PR1">
+    <div class="row justify-content-center">
+        <div class="col-sm-1 projects">
+          <div class="card1">
+            <div class="card-body text-center">
+              <h4 class="card-title1">Apple Music App Recreation</h4>
+              <p class="card-text1">
+                <a href="https://www.figma.com/proto/moDBeDx1JDhsB7sdx6TK7x/APPLE-MUSIC?page-id=0%3A1&node-id=1-3&mode=design&t=IMulapyFp6zZjgxq-1"><img src="images/Screenshot 2023-12-13 224500.png" width="300px"></a> <br>Click to see the project in detail</p>
+               </div>
+    </div>
+
+    <div class="row justify-content-center">
+        <div class="col-sm-1 projects">
+          <div class="card1a">
+            <div class="card-body text-center">
+              <p class="card-text1a">
+                 <br>This is a mid fidelity recreation of the Apple Music App. For this project I worked with Figma to clone the app as close as possible to the original, using screenshots from the app.</p>
+               </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="PR2">
+    <div class="row justify-content-center">
+        <div class="col-sm-1 projects">
+          <div class="card2">
+            <div class="card-body text-center">
+              <h4 class="card-title1">Headspace App Recreation</h4>
+              <p class="card-text1">
+                <a href="https://www.figma.com/proto/eMX95aFZ2d6OLfoV7kzeHL/Headspace?page-id=0%3A1&type=design&node-id=1-2&viewport=166%2C321%2C0.22&t=yCgylvFSVFDdUNj2-1&scaling=scale-down&starting-point-node-id=1%3A2&show-proto-sidebar=1&mode=design"><img src="images/Screenshot 2023-12-14 005204.png" width="300px"></a> <br>Click to see the project in detail</p>
+                </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-sm-1 projects">
+              <div class="card1b">
+                <div class="card-body text-center">
+                  <p class="card-text1b">
+                     <br>This is a high fidelity application recreation i did on Figma. The app being recreated here is Headspace, which is a mental health and wellbeing app, designed to provide users with guided meditations everyday </p>
+                   </div>
+                </div>
+            </div>
+        </div>
+</section>
+</body>
+</html>
