--- a/projects.html
+++ b/projects.html
@@ -22,13 +22,13 @@
     <header class="container py-3">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand heading-font" href="Landing page.html"> <img src="images/Screenshot 2023-12-12 020221.png" width="40px" alt=""style="margin-right:10px;">Arundhathy Varma</a>
+                <a class="navbar-brand heading-font" href="index.html"> <img src="images/Screenshot 2023-12-12 020221.png" width="40px" alt=""style="margin-right:10px;">Arundhathy Varma</a>
                 <div class="d-flex">
-                    <a class="nav-link" href="Landing page.html#about">About me</a> 
+                    <a class="nav-link" href="index.html#about">About me</a> 
                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                     <a class="nav-link" href="#projects.html">Projects</a>
                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                    <a class="nav-link" href="Landing page.html#contact">Contact</a>
+                    <a class="nav-link" href="index.html#contact">Contact</a>
                 </div>
             </div>
         </nav>
