--- a/projects.html
+++ b/projects.html
@@ -85,11 +85,18 @@
               <div class="card1b">
                 <div class="card-body text-center">
                   <p class="card-text1b">
-                     <br>This is a high fidelity application recreation i did on Figma. The app being recreated here is Headspace, which is a mental health and wellbeing app, designed to provide users with guided meditations everyday </p>
+                     <br>This is a high fidelity application recreation i did on Figma. The app being recreated here is Headspace, which is a mental health and well being app, designed to provide users with guided meditations everyday </p>
                    </div>
                 </div>
             </div>
         </div>
 </section>
+
+<div class="footer">
+    <footer class="container text-center py-4">
+        <a href="https://maps.app.goo.gl/quP3w9fHGffHURt18">Mumbai,India</a> &nbsp
+        <a href="mailto:arundhathyvm2@gmail.com";>arundhathyvm2@gmail.com</a> &nbsp
+        <a href="tel:+9560272293">9560272293</a>
+    </footer>
 </body>
 </html>
